--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -9,7 +9,7 @@ html, body {
   padding:0px;
   overflow-x: hidden;
   overflow-y: hidden;
-  background-color: $mzl-grey;
+  // background-color: $mzl-grey;
 }
 
 .full-height {
